--- a/config.cfg
+++ b/config.cfg
@@ -1,7 +1,7 @@
-ProgramVersion=0.1.1.0
-Language=Default
+ProgramVersion=0.1.4.0
+Language=es-ES
 ProposeRandom=False
-JobPickupTime=360
+JobPickupTime=72
 LoopEvery=0
 TimeMultiplier=50.1
 DistanceMes=km
